--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -12,6 +12,11 @@
     android:orientation="vertical"
     tools:context="com.example.priya.week2_demo1.Main2Activity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Another view"/>
+
     <Button
         android:id="@+id/Activity2"
         android:layout_width="wrap_content"
