add third activity
add third activity
add button in activity 2 that opens activity 3
add button in activity 3 that opens activity 1

--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -15,11 +15,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Third Page" />
+        android:text="@string/activity3Head" />
     <Button
         android:id="@+id/thirdBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/backHome"/>
+        android:text="@string/backHome" />
 
 </LinearLayout>
