--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -15,13 +15,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Another view"/>
+        android:text="@string/activity2Head"/>
 
     <Button
         android:id="@+id/Activity2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/getBack"
+        android:text="@string/getBack" />
+    <Button
+        android:id="@+id/toActivity3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/goAway"
         android:onClick="rOnclick"/>
 
 </LinearLayout>
